[package]
name = "awl-prover-native"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
awl-core = { path = "../../core" }

[features]
default = ["native"]
native = []